# markdown-preview

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  dokploy.yaml  env.example  nginx.conf  nixpacks.toml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release-arm64.yml  release.yml
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ExportMenu.tsx
monitoring/: health-check.sh  log-config.yaml
scripts/: dev-setup.sh
src/: main.rs
tests/performance/: load-test.js  package.json
