[package]
name = "markdown-preview-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
tower-http = { version = "0.5", features = ["cors", "fs"] }
env_logger = "0.10"
log = "0.4"
chrono = "0.4" 